# trade-algo

./: .gitignore  DIAGNOSTIC_REPORT.md  README.md  config.py  requirements.txt  run.py  run_benchmark.py  run_live.py  run_strategies.py
backtest/: deflated_sharpe.py  engine.py  metrics.py
benchmarks/: sma_mean_reversion.py
cpp/: CMakeLists.txt  main.cpp  order_book.cpp  order_book.hpp
data/: alpaca_loader.py  loader.py
live/: alpaca_connector.py
ml/: clustering.py  lda_analysis.py  pca_analysis.py
research/: meta_labeler.py  pairs_finder.py  spread_model.py
risk/: circuit_breaker.py  position_sizing.py
signals/: kalman_filter.py  markov_regime.py  regime_filter.py
strategies/: dual_class_arb.py  momentum.py  rl_trader.py  sector_pairs.py
